--- a/ecmcMainWndDesigner.ui
+++ b/ecmcMainWndDesigner.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>454</width>
-    <height>418</height>
+    <height>251</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -15,41 +15,34 @@
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
-    <item row="3" column="0">
-     <widget class="QLineEdit" name="linePvName"/>
-    </item>
     <item row="0" column="0">
-     <widget class="QPushButton" name="btnStart">
+     <widget class="QLabel" name="lblPrefix">
       <property name="text">
-       <string>Start</string>
+       <string>IOC Prefix:</string>
       </property>
      </widget>
     </item>
-    <item row="1" column="0">
+    <item row="5" column="0">
      <widget class="QPushButton" name="pbStartMotorGUI">
       <property name="text">
        <string>Open Motor GUI</string>
       </property>
      </widget>
     </item>
+    <item row="4" column="0">
+     <widget class="QLineEdit" name="lineAxisName"/>
+    </item>
+    <item row="1" column="0">
+     <widget class="QLineEdit" name="lineIOCPrefix"/>
+    </item>
+    <item row="2" column="0">
+     <widget class="QLabel" name="label">
+      <property name="text">
+       <string>Axis Name:</string>
+      </property>
+     </widget>
+    </item>
    </layout>
-  </widget>
-  <widget class="QMenuBar" name="menubar">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>454</width>
-     <height>28</height>
-    </rect>
-   </property>
-   <widget class="QMenu" name="menuFile">
-    <property name="title">
-     <string>File</string>
-    </property>
-    <addaction name="actionExit"/>
-   </widget>
-   <addaction name="menuFile"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <action name="actionExit">
