--- a/ecmcMainWndDesigner.ui
+++ b/ecmcMainWndDesigner.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>454</width>
-    <height>251</height>
+    <width>929</width>
+    <height>310</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,31 +16,60 @@
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
     <item row="0" column="0">
-     <widget class="QLabel" name="lblPrefix">
-      <property name="text">
-       <string>IOC Prefix:</string>
-      </property>
-     </widget>
-    </item>
-    <item row="5" column="0">
-     <widget class="QPushButton" name="pbStartMotorGUI">
-      <property name="text">
-       <string>Open Motor GUI</string>
-      </property>
-     </widget>
-    </item>
-    <item row="4" column="0">
-     <widget class="QLineEdit" name="lineAxisName"/>
-    </item>
-    <item row="1" column="0">
-     <widget class="QLineEdit" name="lineIOCPrefix"/>
-    </item>
-    <item row="2" column="0">
-     <widget class="QLabel" name="label">
-      <property name="text">
-       <string>Axis Name:</string>
-      </property>
-     </widget>
+     <layout class="QHBoxLayout" name="horizontalLayout">
+      <item>
+       <layout class="QVBoxLayout" name="pvLayout">
+        <item>
+         <widget class="QLabel" name="label_2">
+          <property name="text">
+           <string>PV name:</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLineEdit" name="lineEdit"/>
+        </item>
+        <item>
+         <widget class="QPushButton" name="pbStartpvTrend">
+          <property name="text">
+           <string>Open PV Trend</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+      <item>
+       <layout class="QVBoxLayout" name="motorLayout">
+        <item>
+         <widget class="QLabel" name="lblPrefix">
+          <property name="text">
+           <string>IOC Prefix:</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLineEdit" name="lineIOCPrefix"/>
+        </item>
+        <item>
+         <widget class="QLabel" name="label">
+          <property name="text">
+           <string>Axis Name:</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLineEdit" name="lineAxisName"/>
+        </item>
+        <item>
+         <widget class="QPushButton" name="pbStartMotorGUI">
+          <property name="text">
+           <string>Open Motor GUI</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+     </layout>
     </item>
    </layout>
   </widget>
